multiprocessing by raypcalls.c.

Added -n option to rtrace for executing on multiple cores
using new rayfifo calls.

=====================
Version 4.1

Changed ranimate behavior so remote login under a different user
doesn't necessarily require the presence of the originating user's
home directory.

Changed standard transmission function normalization back to what
it was in version 3.5, following recommendation of David Geisler-Moroder,
who pointed out that the revised BTDF increased too much at grazing.

Changed rad behavior with -N >1 on single view to call rpiece.

Updated SCons build system for MINGW compilation, thanks to Christian
Kohler.

Added -u option to rlam for unbuffered output.

Modified dctimestep to accept sky vector and daylight coefficient matrix
or list of images to sum together, as suggested by Andy McNeil.

Created genBSDF script to generate BSDF in Windows XML format.

Modified mkillum to accept detailed geometry from BSDF XML files.

Altered obj2rad to ignore zero normals (thanks to Jack de Valpine for
suggestions and help).

Fixed bug in genklemsamp that caused non-uniform sampling over surfaces.

Fied bugs in rhoptimize and rhcopy for 64-bit compilation.

Made change to avoid problem using gcc --fast-math compile option.

****** COMPATIBILITY CHANGE ********
Changed behavior of rtrace and rtcontrib so that every scanline is
not flushed when both -x and -y are set.  This avoids flush delays
in rtcontrib for large numbers of output files and delays while
rendering images using rtrace with the -n option.

Added ability for rsensor to output ray origins and directions
rather than actually loading octree and computing sensor value.

Fixed old bug in obj2rad where it would stop processing and
report a syntax error if the "void" type is used in the map file.

Updated reflection model according to EGSR 2010 paper by David
Geisler-Moroder and Arne Duer.

Replaced C-shell version of falsecolor with Perl script written
by Axel Jacobs.